WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247800
[GStreamer] Monitor GstStream tags and minor test fix
https://bugs.webkit.org/show_bug.cgi?id=247800
Summary
[GStreamer] Monitor GstStream tags and minor test fix
Philippe Normand
Reported
2022-11-11 04:38:23 PST
For playbin2 case we have some code to keep track of sticky tag events in TrackPrivateBase. For playbin3 case we can simply monitor the tags property on the GstStream.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-11-11 04:40:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6394
EWS
Comment 2
2022-11-14 04:46:58 PST
Committed
256649@main
(d6ad2e4228d0): <
https://commits.webkit.org/256649@main
> Reviewed commits have been landed. Closing PR #6394 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-11-14 04:47:20 PST
<
rdar://problem/102316262
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug