Cherry-pick 256649@main (d6ad2e4228d0). https://bugs.webkit.org/show_bug.cgi?id=247800

[GStreamer] Monitor GstStream tags and minor test fix
    https://bugs.webkit.org/show_bug.cgi?id=247800

    Reviewed by Xabier Rodriguez-Calvar.

    For playbin2 case we have some code to keep track of sticky tag events in TrackPrivateBase. For
    playbin3 case we can simply monitor the tags property on the GstStream.

    * LayoutTests/http/tests/security/resources/reference-movie-cross-origin-allow.py: Fix content-type
    for mp4 resource.
    * Source/WebCore/platform/graphics/gstreamer/TrackPrivateBaseGStreamer.cpp:
    (WebCore::TrackPrivateBaseGStreamer::TrackPrivateBaseGStreamer):
    (WebCore::TrackPrivateBaseGStreamer::setPad):
    (WebCore::TrackPrivateBaseGStreamer::disconnect):
    (WebCore::TrackPrivateBaseGStreamer::tagsChangedCallback): Deleted.
    * Source/WebCore/platform/graphics/gstreamer/TrackPrivateBaseGStreamer.h:

    Canonical link: https://commits.webkit.org/256649@main