LayoutTests/http/tests/security/resources/reference-movie-cross-origin-allow.py
@@ -15,7 +15,7 @@ sys.stdout.write(
     'ETag: foo\r\n'
     'Last-Modified: Thu, 01 Jan 2000 00:00:00 GMT\r\n'
     'Cache-Control: max-age=0\r\n'
-    'Content-Type: text/html\r\n'
+    'Content-Type: video/mp4\r\n'
     'Content-Length: {}\r\n\r\n'.format(os.path.getsize(os.path.join(os.path.dirname(__file__), '../../media/resources/reference.mov')))
 )
 
